Attempt to put back the experimental border and see if it solves the spacing issue.

--- a/Views/TankDetailsView.axaml
+++ b/Views/TankDetailsView.axaml
@@ -24,7 +24,7 @@
                 <avalonia:MaterialIcon Kind="ArrowBack"></avalonia:MaterialIcon>
             </Button.Content>
         </Button>
-        <TextBlock Text="PLACEHOLDER"
+        <TextBlock Text="BLUELIGHT GIN  •••  VIBE HARD SELTZER"
                    Grid.Row="0"
                    Grid.Column="1"
                    HorizontalAlignment="Center"
