--- a/Views/DetailsTempPanel.axaml
+++ b/Views/DetailsTempPanel.axaml
@@ -25,7 +25,7 @@
                                    Opacity=".7"
                                    VerticalAlignment="Center" />
             <TextBlock VerticalAlignment="Center"
-                       Text="{Binding SelectedTankModel.Temperature, FallbackValue=--, StringFormat=N1}"
+                       Text="{Binding MainTankTemperature, FallbackValue=--, StringFormat=N1}"
                        FontSize="95" />
             <TextBlock Text="&#186;F"
                        FontSize="30"
